# parts-shop

./: .gitignore  main.py  output.css  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
demoproject/: settings.py  urls.py
products/: autos_invoice_rows.csv  autos_xml_invoice.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_merchantitem_modified_at_and_more.py  0003_alter_merchantitem_modified_at_and_more.py  0004_alter_merchantitem_modified_at_and_more.py  0005_alter_merchantitem_modified_at_and_more.py  0006_alter_merchantitem_modified_at_and_more.py  0007_alter_merchantitem_modified_at_and_more.py  0008_alter_merchantitem_modified_at_and_more.py  0009_alter_merchantitem_modified_at_and_more.py  0010_alter_item_options_alter_manufacturer_options_and_more.py  0011_alter_merchantitem_modified_at_and_more.py  0012_alter_merchantitem_modified_at_and_more.py  0013_alter_merchantitem_modified_at_and_more.py  0014_alter_merchantitem_modified_at_and_more.py  0015_alter_merchantitem_modified_at_and_more.py  0016_alter_merchantitem_modified_at_and_more.py  0017_alter_merchantitem_modified_at_and_more.py
products/tests/: test_reading.py
sql/: autos_invoice.sql  mi_itemcode.sql  query.sql
static/src/: script.js
templates/: applesauce.html  base.html  codes-found.html  codes_found.html  crossref_form.html  crossrefs.html  home.html  invoice.html  menu.html  merchants.html  merchants_found.html  upload_invoice.html
users/: forms.py
users/migrations/: 0001_initial.py
(+1 files in other folders)
