[project]
name = "parts-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "asgiref==3.8.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "cssbeautifier==1.15.1",
    "django==5.1.1",
    "djlint==1.35.2",
    "editorconfig==0.12.4",
    "html-tag-names==0.1.2",
    "html-void-elements==0.1.0",
    "jsbeautifier==1.15.1",
    "json5==0.9.25",
    "pathspec==0.12.1",
    "pip==24.2",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "regex==2024.9.11",
    "rich>=13.9.4",
    "six==1.16.0",
    "sqlparse==0.5.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
